--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
             <h1>My To Do List</h1>
             <input type="text" placeholder="Title..." class="in">
             <button onclick="add()">Add</button>
-            <button onclick="del()">Del</button>
+            <button onclick="rem()">Remove</button>
         </div>
     </div>
     <div class="con2">
         <div class="col2">
-            
+            <ul class="ul">
+                
+            </ul>
         </div>
     </div>
 </body>
